--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -2,45 +2,58 @@
     Hero
 ============= */
 
-#hero{
-    >div{
-        ul{
+#hero {
+    >div {
+        ul {
             margin: 0;
             padding: 0;
             background-color: fuchsia;
 
-            #info-1{
+            #info-1 {
                 background-color: var(--reddark);
                 color: white;
                 padding: 16px;
-              
+
+                h1 {
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 20px;
+                }
+
+                p {
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 20px;
+                }
+
 
             }
 
-            #info-2{
+            #info-2 {
                 background-color: var(--redmain);
                 padding: 16px;
                 color: white;
+                p {
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 20px;
+                }
 
             }
 
-            @include md{
+            @include md {
                 display: grid;
                 grid-template-columns: 40% auto;
             }
 
-            @include lg{
+            @include lg {
                 display: grid;
                 grid-template-columns: 50% auto;
             }
 
-            @include xxl{
+            @include xxl {
                 grid-template-areas: auto 1440px auto;
             }
         }
     }
 }
-
-
-
-
