--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -8,6 +8,30 @@ footer {
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". footer .";
     padding-bottom: 16px;
+    h1{
+        font-weight: 600;
+        font-size: 20px;
+        margin-bottom: 16px;
+    }
+
+    h2{
+        font-weight: 600;
+        font-size: 16px;
+        margin-top: 16px;
+    }
+
+    p{
+        font-weight: 400;
+        font-size: 12px;
+        margin: 16px auto 16px;
+        
+    }
+
+    // a{
+    //     font-weight: 400;
+    //     font-size: 12px;
+       
+    // }
     
 
     >div {
@@ -27,6 +51,7 @@ footer {
             a{
                 padding: 16px 24px;
                 border: none;
+                margin-top: 16px;
             }
                 input{
                     width: 357px;
