--- a/dev/scss/sections/_underhero.scss
+++ b/dev/scss/sections/_underhero.scss
@@ -3,6 +3,12 @@
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". underhero .";
+    h1{
+        font-weight: 400;
+        font-size: 31px;
+        line-height: 30px;
+
+    }
     
     @include xxl{
         grid-template-columns: auto 1280px auto;
@@ -47,6 +53,7 @@
 
                 a{
                     margin-bottom: 16px;
+                    margin-top: 16px;
                 }
             }
       
