--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -43,9 +43,9 @@ ul{
     display: inline-block;
 }
 
-.searchbuttoncolor{
-    background-color: var(--redmain);
-}
+// .searchbuttoncolor{
+//     background-color: var(--redmain);
+// }
 
 .newheadline{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
