--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -68,6 +68,7 @@
 
             background-color: var(--greylight);
             text-align: left;
+            box-shadow: 0px 1px 1px rgba(42, 48, 54, 0.3);
 
 
             img {
