--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -43,6 +43,19 @@ footer {
             grid-template-columns: 70% auto;
             padding: 16px;
             grid-area: newsletter;
+            
+            a:link, 
+            a:visited{
+                text-decoration: none;
+                color: white;
+                transition: 0.25s;
+                
+            }
+
+            a:hover, a:active{
+                text-decoration: underline;
+                
+            }
 
             a{
                 padding: 16px 24px;
