--- a/dev/scss/sections/_underhero.scss
+++ b/dev/scss/sections/_underhero.scss
@@ -42,6 +42,21 @@
                 justify-content: space-between;
                 color: white;
 
+            
+                    a:link, 
+                    a:visited{
+                        text-decoration: none;
+                        color: white;
+                        transition: 0.25s;
+                        
+                    }
+    
+                    a:hover, a:active{
+                        text-decoration: underline;
+                        
+                    }
+                
+
                 img{
                     width: 100px;
                     height: 100px;
