--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -79,6 +79,11 @@ footer {
             ul{
                 display: flex;
                 gap: 24px;
+                li{
+                    a:link, a:visited{
+                        color: black;
+                    }
+                }
 
             }
         }
