--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -28,18 +28,16 @@ header {
     grid-template-areas: ". search .";
     padding: 16px 0;
 
-    // button:link, 
-    // button:visited{
+    button{
         
-    //     color: white;
-    //     transition: 0.25s;
-        
-    // }
+        color: white;
+        transition: 0.25s;
+        cursor: pointer;
 
-    // button:hover, button:active{
-    //     color: var(--navy);
-        
-    // }
+        &:hover{
+            background-color: var(--navy);
+        }
+    }
 
     @include md{
         padding: 24px 0;
