--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -30,14 +30,14 @@
 
     ul {
 
-        h1{
+        h1 {
             font-weight: 600;
             font-size: 27px;
             color: black;
             line-height: 30px;
         }
 
-        p{
+        p {
             font-weight: 400;
             line-height: 20px;
         }
@@ -69,23 +69,30 @@
             background-color: var(--greylight);
             text-align: left;
             box-shadow: 0px 1px 1px rgba(42, 48, 54, 0.3);
-           
-            a:link, 
-            a:visited{
+
+            a:link,
+            a:visited {
                 text-decoration: none;
                 color: white;
                 transition: 0.25s;
-                
+
             }
 
-            a:hover, a:active{
+            a:hover,
+            a:active {
                 text-decoration: underline;
-                
+
             }
 
-            img {
-                width: 100%;
-                padding: none;
+            // img {
+            //     width: 100%;
+            //     padding: none;
+            // }
+
+            .card-img {
+                background-size: cover;
+                background-position: center;
+                height: 30vh;
             }
 
             section {
@@ -94,15 +101,11 @@
                 padding: 16px;
                 gap: 16px;
 
-
-
                 div {
                     margin-top: auto;
 
                     a {
                         display: inline-block;
-
-
                     }
                 }
 
@@ -113,21 +116,36 @@
 
     #c1 {
         grid-area: c1;
+
+        .card-img {
+            background-image: url("../img/whatsnew/shaunwhitegold.jpg");
+        }
     }
 
     #c2 {
         grid-area: c2;
+
+        .card-img {
+            background-image: url("..img/whatsnew/mobiletrick.jpg");
+        }
+
     }
 
     #c3 {
         grid-area: c3;
+
+
     }
 
     #c4 {
         grid-area: c4;
+
+
     }
 
     #c5 {
         grid-area: c5;
+
+
     }
 }
