--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -119,7 +119,7 @@
         grid-area: c1;
 
         .card-img {
-            background-image: url("../img/whatsnew/shaunwhitegold.jpg");
+            background-image: url("../img/whatsnew/wn1.jpg");
         }
     }
 
@@ -136,7 +136,7 @@
         grid-area: c3;
 
         .card-img{
-            background-image: url("..img/whatsnew/womangold.jpg");
+            background-image: url("..img/whatsnew/wn3.jpg");
 }
     }
 
