--- a/dev/scss/sections/_whatsnew.scss
+++ b/dev/scss/sections/_whatsnew.scss
@@ -127,9 +127,9 @@
 
     #c3 {
         grid-area: c3;
-        // .card-img {
-        //     background-image: url("../img/whatsnew/wn3.jpg");
-        // }
+        .card-img {
+            background-image: url("../img/whatsnew/wn3.jpg");
+        }
    
     }
 
