--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -82,6 +82,7 @@ footer {
                 li{
                     a:link, a:visited{
                         color: black;
+                        font-size: x-large;
                     }
                 }
 
